--- a/src/components/Table/index.scss
+++ b/src/components/Table/index.scss
@@ -4,7 +4,6 @@
     margin-bottom: 100px !important;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer 10+ */
-    scroll-behavior: smooth;
   }
 
   &.pf-table {
